service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-api-test-service
spec:
  selector:
    app: my-api-test
  ports:
    - protocol: TCP
      port: 81
      targetPort: 8080
